# ratchet

./: .gitignore  CNAME  LICENSE  README.md  bench.py  benchmark_results.json  benchmark_runner.py  databricks_learning_results.json  determinism_results.json  index.html  lm_self_improve_results.json  lm_studio_benchmark.json  pyproject.toml  self_improve_results.json  test_fastapi_app.py  test_latest_research.py  test_search_debug.py
.github/workflows/: deploy.yml
assets/css/: styles.b7effe97.css
assets/js/: 0a0e45d1.2ad0ceeb.js  0e384e19.048ca109.js  42.deaf3fc3.js  a94703ab.f3e61878.js  aba21aa0.3d395032.js  c4f5d8e4.962bad3a.js  d589d3a7.5a4d36e4.js
configs/: README.md
docs/: api-reference.html  getting-started.html  intro.html  skills.html
docs-site/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-site/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json
docs-site/docs/: api-reference.md  architecture.md  intro.md  (+4 more)
examples/: benchmark.py  code_repair.py
ratchet/: __init__.py  agent.py  browser.py  curator.py  determinism.py  generator.py  hermes_determinism.py  knowledge_base.py  mcp_client.py  models.py  reflector.py  skill.py  verifier.py
ratchet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: build_databricks_kb.py
skills/: README.md
tests/: __init__.py  test_databricks_learning.py  test_ddg_debug.py  test_determinism_agent.py  test_determinism_api.py  test_mcp_env.py  test_ratchet.py
tools/: verify_code_tool.py
(+23 files in other folders)
