[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ratchet"
version = "0.1.0"
description = "Deterministic self-improving AI agent framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ratchet*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
